Modify node to get all tasks.

--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -25,30 +25,10 @@
                 </div>
             </div>
             <div id = "content-div" > 
-                <div class = "card" id = "sign-up-div">
-                    <h2 id = "sign-up">Request Help</h2>
-                    <table>
-                        <tr>
-                            <td><h4>Task</h4></td> 
-                            <td> <input type = "text" id = "name"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Date</h4></td> 
-                            <td> <input type = "text" id = "city"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Time</h4></td> 
-                            <td> <input type = "text" id = "state"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Length (hrs)</h4></td> 
-                            <td> <input type = "text" id = "street"> </td>
-                        </tr>
-                    </table>
-                    <input type = "submit" value = "REQUEST" class = "submit-button">
-                </div>
+
             </div>
         </div>
     </body>
     <script src = "main.js"></script>
+    <script src = "Card.js"></script>
 </html>
