Try to make post requests work.

--- a/Request/index.html
+++ b/Request/index.html
@@ -30,22 +30,24 @@
                     <table>
                         <tr>
                             <td><h4>Task</h4></td> 
-                            <td> <input type = "text" id = "name"> </td>
+                            <td> <input type = "text" id = "task"> </td>
                         </tr>
                         <tr>
                             <td><h4>Date</h4></td> 
-                            <td> <input type = "text" id = "city"> </td>
+                            <td> <input type = "text" id = "date"> </td>
                         </tr>
                         <tr>
                             <td><h4>Time</h4></td> 
-                            <td> <input type = "text" id = "state"> </td>
+                            <td> <input type = "text" id = "time"> </td>
                         </tr>
+<!--
                         <tr>
                             <td><h4>Length (hrs)</h4></td> 
                             <td> <input type = "text" id = "street"> </td>
                         </tr>
+-->
                     </table>
-                    <input type = "submit" value = "REQUEST" class = "submit-button">
+                    <input type = "submit" value = "REQUEST" class = "submit-button" id = "request-button">
                 </div>
             </div>
         </div>
