--- a/Request/index.html
+++ b/Request/index.html
@@ -15,8 +15,8 @@
             <div id = "sidebar">
                 
                 <div id = "sidebar-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button">
-                    <input type = "submit" value = "VOLUNTEER" class = "submit-button">
+                    <input type = "submit" value = "REQUEST HELP" class = "submit-button" id = "side-request-button">
+                    <input type = "submit" value = "VOLUNTEER" class = "submit-button" id = "volunteer-button">
                 </div>
                 
                 <div id = "profile-div">
@@ -25,8 +25,8 @@
                 </div>
             </div>
             <div id = "content-div" > 
-                <div class = "card" id = "sign-up-div">
-                    <h2 id = "sign-up">Request Help</h2>
+                <div class = "card" id = "request-div">
+                    <h2 id = "request-help">Request Help</h2>
                     <table>
                         <tr>
                             <td><h4>Task</h4></td> 
