--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <td> <input type = "text" id = "sign-in-password"> </td>
                         </tr>
                     </table>
-                    <input type = "submit" class = "submit-button" value = "Sign In">
+                    <input type = "submit" class = "submit-button" value = "Sign In" id = "sign-in">
                 </div>
             </div>
         </div>
