--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -15,8 +15,8 @@
             <div id = "sidebar">
                 
                 <div id = "sidebar-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button">
-                    <input type = "submit" value = "VOLUNTEER" class = "submit-button">
+                    <input type = "submit" value = "REQUEST HELP" class = "submit-button" id = "request-button">
+                    <input type = "submit" value = "VOLUNTEER" class = "submit-button" id = "volunteer-button">
                 </div>
                 
                 <div id = "profile-div">
