--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     <h2 id = "sign-up">Sign In</h2>
                     <table>
                         <tr>
-                            <td><h4>Username</h4></td> 
+                            <td><h4>Username(Use "test")</h4></td> 
                             <td> <input type = "text" id = "sign-in-username"> </td>
                         </tr>
                         <tr>
-                            <td><h4>Password</h4></td> 
+                            <td><h4>Password(Use "hack")</h4></td> 
                             <td> <input type = "text" id = "sign-in-password"> </td>
                         </tr>
                     </table>
