--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title> </title>
         <link rel = "stylesheet" type = "text/css" href = "style.css">
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 
     </head>
     <body>
@@ -30,14 +30,6 @@
                             <td> <input type = "text" id = "city"> </td>
                         </tr>
                         <tr>
-                            <td><h4>State</h4></td> 
-                            <td> <input type = "text" id = "state"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Street</h4></td> 
-                            <td> <input type = "text" id = "street"> </td>
-                        </tr>
-                        <tr>
                             <td><h4>Username</h4></td> 
                             <td> <input type = "text" id = "username"> </td>
                         </tr>
@@ -46,7 +38,7 @@
                             <td> <input type = "text" id = "password"> </td>
                         </tr>
                     </table>
-                    <input type = "submit" value = "Sign Up" class = "submit-button">
+                    <input type = "submit" value = "Sign Up" class = "submit-button" id = "sign-up-button">
                 </div>
                 <div class = "card" id = "sign-in-div">
                     <h2 id = "sign-up">Sign In</h2>
