--- a/Request/index.html
+++ b/Request/index.html
@@ -13,17 +13,12 @@
                 <div id = "website-name-div">
                     <h1 id = "website-name">KOMMUNITY</h1>
                 </div>
-            </div>
-            <div id = "sidebar">
-                
-                <div id = "sidebar-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button" id = "side-request-button">
-                    <input type = "submit" value = "VOLUNTEER" class = "submit-button" id = "volunteer-button">
+                <div id = "function-buttons">
+                    <input type = "submit" value = "REQUEST HELP" class = "submit-button page-button" id = "request-page-button">
+                    <input type = "submit" value = "VOLUNTEER" class = "submit-button page-button" id = "volunteer-button">
                 </div>
-                
                 <div id = "profile-div">
-                    <h3 id = "name">Tim Cook</h3>
-                    <h3 id = "Location">Cupertino</h3>
+                    <h3 id = "name">Tim Cook</h3>                
                 </div>
             </div>
             <div id = "content-div" > 
