Add logout and auto redirect to main page if not logged in.

--- a/Request/index.html
+++ b/Request/index.html
@@ -14,11 +14,12 @@
                     <h1 id = "website-name">KOMMUNITY</h1>
                 </div>
                 <div id = "function-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button page-button" id = "request-page-button">
+                    <input type = "submit" value = "REQUEST HELP" class = "submit-button page-button" id = "request-button">
                     <input type = "submit" value = "VOLUNTEER" class = "submit-button page-button" id = "volunteer-button">
                 </div>
                 <div id = "profile-div">
-                    <h3 id = "name">Tim Cook</h3>                
+                    <h3 id = "name">Not Logged In</h3>
+                    <input type = "submit" value = "Log Out" class = "submit-button" id = "log-out-button">
                 </div>
             </div>
             <div id = "content-div" > 
@@ -44,7 +45,7 @@
                         </tr>
 -->
                     </table>
-                    <input type = "submit" value = "REQUEST" class = "submit-button" id = "request-button">
+                    <input type = "submit" value = "REQUEST" class = "submit-button" id = "request-task-button">
                 </div>
             </div>
         </div>
