--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -18,7 +18,8 @@
                     <input type = "submit" value = "VOLUNTEER" class = "submit-button page-button" id = "volunteer-button">
                 </div>
                 <div id = "profile-div">
-                    <h3 id = "name">Tim Cook</h3>                
+                    <h3 id = "name">Not Logged In</h3>
+                    <input type = "submit" value = "Log Out" class = "submit-button" id = "log-out-button">
                 </div>
             </div>
             <div id = "content-div" > 
