--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div id = "message-div">
-                <h1 id = "message">Get Help. Help Others. Support Your Community.</h1>
+                <h1 id = "message">Request Help. Help Others. Support Your Community.</h1>
             </div>
             <div id = "content-div" > 
                 <div class = "card" id = "sign-up-div">
