Clean up  landing page.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                         </tr>
                     </table>
                     <input type = "submit" class = "submit-button" value = "Sign In" id = "sign-in">
-                    
+                </div>
+                <div id = 'mission-div'>
+                    <h2 id = "mission-description-header">What is Kommunity?</h2>
+                    <h4 id = "mission-description">Kommunity is a platform for social good. It allows individuals to volunteer to fulfill a request for help from someone nearby. This could range from picking up groceries to carrying furniture and gardening--The list goes on!</h4>
+                    <h2 id = "get-started-header">Sign Up to Get Started!</h2>
                 </div>
             </div>
         </div>
