--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
                     <h2 id = "get-started-header">Sign Up to Get Started!</h2>
                 </div>
             </div>
+            <div id = "footer-div">
+            <footer id = "footer">
+            <span id = "footer-message">Made with &lt;/&gt; by </span>
+            <a id = "footer-link" href="https://github.com/22anirudhk">22anirudhk</a>
+        </footer>
         </div>
+        </div>
+        
     </body>
     <script src = "main.js"></script>
 </html>
