Add some documentation.

--- a/Request/index.html
+++ b/Request/index.html
@@ -2,10 +2,9 @@
 
 <html>
     <head>
-        <title> </title>
-        <link rel = "stylesheet" type = "text/css" href = "style.css">
-
-
+        <title>Request</title>
+        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/top-bar.css">
     </head>
     <body>
         <div id = "everything">
