--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -2,10 +2,10 @@
 
 <html>
     <head>
-        <title> </title>
-        <link rel = "stylesheet" type = "text/css" href = "style.css">
-
-
+        <title>Volunteer</title>
+        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/content.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/top-bar.css">
     </head>
     <body>
         <div id = "everything">
