--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
     <head>
         <title> </title>
-        <link rel = "stylesheet" type = "text/css" href = "style.css">
-
-
+        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/top-bar.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/message.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/mission.css">
+        <link rel = "stylesheet" type = "text/css" href = "css/content.css">
     </head>
     <body>
         <div id = "everything">
