--- a/Request/index.html
+++ b/Request/index.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <title>Request</title>
-        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/top-bar.css">
+        <link rel = "stylesheet" type = "text/css" href = "/Request/css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "/Request/css/top-bar.css">
     </head>
     <body>
         <div id = "everything">
@@ -49,5 +49,5 @@
             </div>
         </div>
     </body>
-    <script src = "main.js"></script>
+    <script src = "/Request/main.js"></script>
 </html>
