--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -3,9 +3,9 @@
 <html>
     <head>
         <title>Volunteer</title>
-        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/content.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/top-bar.css">
+        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/content.css">
+        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/top-bar.css">
     </head>
     <body>
         <div id = "everything">
@@ -27,5 +27,5 @@
             </div>
         </div>
     </body>
-    <script src = "main.js"></script>
+    <script src = "/Volunteer/main.js"></script>
 </html>
