Add button styling.

--- a/Volunteer/index.html
+++ b/Volunteer/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Volunteer</title>
-        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/content.css">
-        <link rel = "stylesheet" type = "text/css" href = "/Volunteer/css/top-bar.css">
-    </head>
-    <body>
-        <div id = "everything">
-            <div id = "top-div"> 
-                <div id = "website-name-div">
-                    <h1 id = "website-name">KOMMUNITY</h1>
-                </div>
-                <div id = "function-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button page-button" id = "request-button">
-                    <input type = "submit" value = "VOLUNTEER" class = "submit-button page-button" id = "volunteer-button">
-                </div>
-                <div id = "profile-div">
-                    <h3 id = "name">Not Logged In</h3>
-                    <input type = "submit" value = "Log Out" class = "submit-button" id = "log-out-button">
-                </div>
-            </div>
-            <div id = "content-div" > 
-                
-            </div>
+  <head>
+    <title>Volunteer</title>
+    <link rel="stylesheet" type="text/css" href="/Volunteer/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/Volunteer/css/content.css" />
+    <link rel="stylesheet" type="text/css" href="/Volunteer/css/top-bar.css" />
+  </head>
+  <body>
+    <div id="everything">
+      <div id="top-div">
+        <div id="website-name-div">
+          <h1 id="website-name">KOMMUNITY</h1>
         </div>
-    </body>
-    <script src = "/Volunteer/main.js"></script>
+        <div id="function-buttons">
+          <input
+            type="submit"
+            value="REQUEST HELP"
+            class="submit-button page-button"
+            id="request-button"
+          />
+          <input
+            type="submit"
+            value="VOLUNTEER"
+            class="submit-button page-button"
+            id="volunteer-button"
+          />
+        </div>
+        <div id="profile-div">
+          <h3 id="name">Not Logged In</h3>
+          <input
+            type="submit"
+            value="Log Out"
+            class="submit-button"
+            id="log-out-button"
+          />
+        </div>
+      </div>
+      <div id="content-div"></div>
+    </div>
+  </body>
+  <script src="/Volunteer/main.js"></script>
 </html>
