--- a/Request/index.html
+++ b/Request/index.html
@@ -1,53 +1,73 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Request</title>
-        <link rel = "stylesheet" type = "text/css" href = "/Request/css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "/Request/css/top-bar.css">
-    </head>
-    <body>
-        <div id = "everything">
-            <div id = "top-div"> 
-                <div id = "website-name-div">
-                    <h1 id = "website-name">KOMMUNITY</h1>
-                </div>
-                <div id = "function-buttons">
-                    <input type = "submit" value = "REQUEST HELP" class = "submit-button page-button" id = "request-button">
-                    <input type = "submit" value = "VOLUNTEER" class = "submit-button page-button" id = "volunteer-button">
-                </div>
-                <div id = "profile-div">
-                    <h3 id = "name">Not Logged In</h3>
-                    <input type = "submit" value = "Log Out" class = "submit-button" id = "log-out-button">
-                </div>
-            </div>
-            <div id = "content-div" > 
-                <div class = "card" id = "request-div">
-                    <h2 id = "request-help">Request Help</h2>
-                    <table>
-                        <tr>
-                            <td><h4>Task</h4></td> 
-                            <td> <input type = "text" id = "task"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Date</h4></td> 
-                            <td> <input type = "text" id = "date"> </td>
-                        </tr>
-                        <tr>
-                            <td><h4>Time</h4></td> 
-                            <td> <input type = "text" id = "time"> </td>
-                        </tr>
-<!--
+  <head>
+    <title>Request</title>
+    <link rel="stylesheet" type="text/css" href="/Request/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/Request/css/top-bar.css" />
+  </head>
+  <body>
+    <div id="everything">
+      <div id="top-div">
+        <div id="website-name-div">
+          <h1 id="website-name">KOMMUNITY</h1>
+        </div>
+        <div id="function-buttons">
+          <input
+            type="submit"
+            value="REQUEST HELP"
+            class="submit-button page-button"
+            id="request-button"
+          />
+          <input
+            type="submit"
+            value="VOLUNTEER"
+            class="submit-button page-button"
+            id="volunteer-button"
+          />
+        </div>
+        <div id="profile-div">
+          <h3 id="name">Not Logged In</h3>
+          <input
+            type="submit"
+            value="Log Out"
+            class="submit-button"
+            id="log-out-button"
+          />
+        </div>
+      </div>
+      <div id="content-div">
+        <div class="card" id="request-div">
+          <h2 id="request-help">Request Help</h2>
+          <table>
+            <tr>
+              <td><h4>Task</h4></td>
+              <td><input type="text" id="task" autocomplete="off" /></td>
+            </tr>
+            <tr>
+              <td><h4>Date</h4></td>
+              <td><input type="text" id="date" autocomplete="off" /></td>
+            </tr>
+            <tr>
+              <td><h4>Time</h4></td>
+              <td><input type="text" id="time" autocomplete="off" /></td>
+            </tr>
+            <!--
                         <tr>
                             <td><h4>Length (hrs)</h4></td> 
                             <td> <input type = "text" id = "street"> </td>
                         </tr>
 -->
-                    </table>
-                    <input type = "submit" value = "REQUEST" class = "submit-button" id = "request-task-button">
-                </div>
-            </div>
+          </table>
+          <input
+            type="submit"
+            value="REQUEST"
+            class="submit-button"
+            id="request-task-button"
+          />
         </div>
-    </body>
-    <script src = "/Request/main.js"></script>
+      </div>
+    </div>
+  </body>
+  <script src="/Request/main.js"></script>
 </html>
