--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <table>
                         <tr>
                             <td><h4>Name</h4></td> 
-                            <td> <input type = "text" id = "name" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "name" autocomplete="off"> </td>
                         </tr>
                         <tr>
                             <td><h4>Location</h4></td> 
-                            <td> <input type = "text" id = "location" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "location" autocomplete="off"> </td>
                         </tr>
                         <tr>
                             <td><h4>Username</h4></td> 
-                            <td> <input type = "text" id = "username" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "username" autocomplete="off"> </td>
                         </tr>
                         <tr>
                             <td><h4>Password</h4></td> 
-                            <td> <input type = "text" id = "password" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "password" autocomplete="off"> </td>
                         </tr>
                     </table>
                     <input type = "submit" value = "Sign Up" class = "submit-button" id = "sign-up-button">
@@ -47,11 +47,11 @@
                     <table>
                         <tr>
                             <td><h4>Username</h4></td> 
-                            <td> <input type = "text" id = "sign-in-username" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "sign-in-username" autocomplete="off"> </td>
                         </tr>
                         <tr>
                             <td><h4>Password</h4></td> 
-                            <td> <input type = "text" id = "sign-in-password" autocomplete="false"> </td>
+                            <td> <input type = "text" id = "sign-in-password" autocomplete="off"> </td>
                         </tr>
                     </table>
                     <input type = "submit" class = "submit-button" value = "Sign In" id = "sign-in">
